# auth-mcp

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
mcp_oauth/: __init__.py  auth_server.py  config.py  resource_server.py
specs/: refresh-tokens.spec.md
tests/: test_auth.py  test_auth_server.py  test_webapp_auth.py
